styled the nav bar for the mobile view by adding lines inbetween each link and correctly spacing and centering, also added an id to the services link

--- a/css/index.css
+++ b/css/index.css
@@ -407,5 +407,27 @@ footer {
 }
 
 @media (max-width: 500px) {
-
+	.container {
+		margin: 0;
+	}
+	nav {
+		align-items: center;
+		width: 100%;
+	}
+	nav div .logo {
+		padding: 10% 0%;
+	}
+	nav .links {
+		align-items: center;
+		flex-flow: column wrap;
+		text-align: center;
+	}
+	nav .links a {
+		border-bottom: 1px solid grey;
+		padding: 3% 0%;
+		width: 100%;
+	}
+	nav .links #services-link {
+		border-top: 1px solid grey;
+	}
 }
